@@ -223,6 +223,7 @@ Bug fixes:
   * Issue #63:  jsdoc highlighting was broken
   * Issue #71:  bogus "no side effects" warning
   * fixed unreported bug where js2-next-error still stopped at suppressed warnings 
+  * highlight 'each' keyword in =for each (foo in bar)= loops
 
 Behavior changes:
 
